--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     def nav_version = "2.3.5"
     def lifecycle_version = "2.4.0"
     def workmanager_version = "2.7.1"
+    def glide_version = "4.12.0"
 
 
     implementation "androidx.lifecycle:lifecycle-process:2.4.0"
@@ -53,6 +54,7 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.work:work-runtime-ktx:$workmanager_version"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
 
 
 
