--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     def lifecycle_version = "2.4.0"
     def workmanager_version = "2.7.1"
     def glide_version = "4.12.0"
+    def vk_api = "3.4.1"
 
 
     implementation "androidx.lifecycle:lifecycle-process:2.4.0"
@@ -55,6 +56,8 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.work:work-runtime-ktx:$workmanager_version"
     implementation "com.github.bumptech.glide:glide:$glide_version"
+    implementation "com.vk:android-sdk-core:$vk_api"
+    implementation "com.vk:android-sdk-api:$vk_api"
 
 
 
